--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       
     <div class="grass4">
       <a href="sorry.html">
-        <h1 class="grass1-title">Blowing in the wind grass</h1>
+        <h1 class="grass1-title">Blowing in the wind</br> grass </h1>
       <img src="../HTML-CSS_Boilerplate-main_ORIGINAL/assets/Images/erba4.svg" alt="grass2">
       </div>
 
@@ -73,6 +73,36 @@
           </div>
 
 </div>
+
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const grassContainer = document.querySelector('.grass-container');
+    const grassElements = Array.from(grassContainer.children);
+
+    // Function to duplicate elements to ensure a smooth infinite scroll
+    function duplicateElements() {
+      grassElements.forEach(el => {
+        const clone = el.cloneNode(true);
+        grassContainer.appendChild(clone);
+      });
+    }
+
+    // Initially duplicate elements enough times to ensure smooth scrolling
+    duplicateElements();
+    duplicateElements(); // Duplicate again to ensure there's enough content
+
+    // Function to check and reset scroll position for infinite scroll effect
+    function checkScroll() {
+      const containerHeight = grassContainer.scrollHeight / 3; // Adjust this if needed
+      if (grassContainer.scrollTop >= containerHeight) {
+        grassContainer.scrollTop -= containerHeight;
+      }
+    }
+
+    grassContainer.addEventListener('scroll', checkScroll);
+  });
+</script>
 
   </body>
 </html>
